Improve functionality and styling
    -add fonts from Google
    -add restart button & logic
    -add hover condition
    -improve comments for documentation purposes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+			rel="stylesheet"
+		/>
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<title>Document</title>
 	</head>
 	<body>
-        <h1>Tic Tac Toe</h1>
+		<h1>Tic Tac Toe</h1>
 		<main class="gameboard">
 			<div class="box" id="a1"></div>
 			<div class="box" id="a2"></div>
@@ -19,7 +28,8 @@
 			<div class="box" id="c2"></div>
 			<div class="box" id="c3"></div>
 		</main>
-		<h2 class="banner">Current Player: </h2>
+		<h2 class="banner">Current Player:</h2>
+		<button class="button">Restart game!</button>
 		<script src="script.js"></script>
 	</body>
 </html>
