--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 	<body>
 		<h1>Tic Tac Toe</h1>
 		<main class="gameboard">
-			<div class="box" id="a1"></div>
-			<div class="box" id="a2"></div>
-			<div class="box" id="a3"></div>
-			<div class="box" id="b1"></div>
-			<div class="box" id="b2"></div>
-			<div class="box" id="b3"></div>
-			<div class="box" id="c1"></div>
-			<div class="box" id="c2"></div>
-			<div class="box" id="c3"></div>
+			<div class="box" id="0"></div>
+			<div class="box" id="1"></div>
+			<div class="box" id="2"></div>
+			<div class="box" id="3"></div>
+			<div class="box" id="4"></div>
+			<div class="box" id="5"></div>
+			<div class="box" id="6"></div>
+			<div class="box" id="7"></div>
+			<div class="box" id="8"></div>
 		</main>
 		<h2 class="banner">Current Player:</h2>
-		<button class="button">Restart game!</button>
+		<button type="button" class="button">Restart game!</button>
 		<script src="script.js"></script>
 	</body>
 </html>
