--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 	<body>
 		<h1>Tic Tac Toe</h1>
 		<main class="gameboard">
-			<div class="box" id="0"></div>
-			<div class="box" id="1"></div>
-			<div class="box" id="2"></div>
-			<div class="box" id="3"></div>
-			<div class="box" id="4"></div>
-			<div class="box" id="5"></div>
-			<div class="box" id="6"></div>
-			<div class="box" id="7"></div>
-			<div class="box" id="8"></div>
+			<div class="box" id=0></div>
+			<div class="box" id=1></div>
+			<div class="box" id=2></div>
+			<div class="box" id=3></div>
+			<div class="box" id=4></div>
+			<div class="box" id=5></div>
+			<div class="box" id=6></div>
+			<div class="box" id=7></div>
+			<div class="box" id=8></div>
 		</main>
 		<h2 class="banner">Current Player:</h2>
 		<button type="button" class="button">Restart game!</button>
